--- a/frontend/src/i18n/lang/zh-CN.json
+++ b/frontend/src/i18n/lang/zh-CN.json
@@ -7,7 +7,7 @@
   "game": {
     "groupBy": {
       "PLATFORM": "按平台分组",
-      "RELEASE": "按发行年份分组",
+      "RELEASE": "按发售年份分组",
       "ADDED": "按最新添加排序"
     },
     "dataSection": {
@@ -17,7 +17,7 @@
     },
     "playlist": {
       "SINGLE_GAME": "主题播放列表",
-      "MULTIPLE": "关联播放列表"
+      "MULTIPLE": "相关播放列表"
     }
   },
   "track": {
@@ -31,7 +31,7 @@
     "type": {
       "SINGLE_GAME_ALL": "《{gameTitle}》所有乐曲",
       "BEST": "《{gameTitle}》精选乐曲",
-      "LOOP": "《{gameTitle}》中可更改时长的乐曲",
+      "LOOP": "《{gameTitle}》支持更改时长的乐曲",
       "SINGLE_GAME": "《{gameTitle}》主题播放列表",
       "MULTIPLE": "多游戏播放列表",
       "SPECIAL": "特别发布"
